Contact page displays well on truncated browser viewport but not phone, gonna see if changing width to auto on input and textarea fixes things

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -435,7 +435,7 @@ input, textarea {
     }
 
     input, textarea {
-        width: 100%;
+        width: auto;
     }
 
     #contact-form-container {
